github page dans le read me

--- a/index.htm
+++ b/index.htm
@@ -26,9 +26,15 @@
     </header>
     <section class="hero">
         <h1 class="hero__titre"></h1>
-        <p class="hero__description"></p>
-        <a href="" class="hero__courriel"></a>
-        <button class="hero__bouton"></button>
+        <p class="hero__description">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, dolorem earum! Aut temporibus hic tenetur reiciendis aspernatur. Minus nobis quia vel quo quis provident porro tenetur, iure sint praesentium enim.
+        </p>
+        <a href="" class="hero__courriel">
+            maisonneuve
+        </a>
+        <button class="hero__bouton">
+            Inscription
+        </button>
     </section>
     <main>
         <section class="galerie">
