--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <header>
         <div class="entete global">
             <figure class="entete__logo">
-                <img src="" alt="">
+                <img src="images/logo.jpg" alt="logo voyage" height="150px" width="150px">
             </figure>
             <div class="entete__nav">
                 <nav class="entete__menu">
@@ -33,7 +33,7 @@
                 <div class="entete__recherche">
                     <form action="" class="recherche">
                         <input type="text" class="recherche__input">
-                        <img src="https://s2.svgbox.net/hero-outline.svg?ic=search&color=000" width="20" height="20">
+                        <img class="recherche__img" src="https://s2.svgbox.net/hero-outline.svg?ic=search&color=000" width="20" height="20">
                     </form>
                 </div>
             </div>
