entete css et menu checkbox

--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,12 @@
     <header>
         <div class="entete global">
             <figure class="entete__logo">
-                <img src="images/logo.jpg" alt="logo voyage" height="150px" width="150px">
+                <img src="images/logo.jpg" alt="logo voyage" height="200px" width="200px">
             </figure>
+            <label for="chk__burger" class="burger">
+                <img src="https://s2.svgbox.net/hero-solid.svg?ic=menu" alt="">
+            </label>
+            <input type="checkbox" name="" id="chk__burger" class="chk__burger">
             <div class="entete__nav">
                 <nav class="entete__menu">
                     <ul class="menu">
