--- a/index.htm
+++ b/index.htm
@@ -9,34 +9,53 @@
 </head>
 <body>
     <header>
-        <div class="entete global">
+        <div class="entete">
             <figure class="entete__logo">
-                <img src="images/logo.jpg" alt="logo voyage" height="200px" width="200px">
+                <img src="images/logo.png" width="80" height="80">
             </figure>
             <label for="chk__burger" class="burger">
-                <img src="https://s2.svgbox.net/hero-solid.svg?ic=menu" alt="">
+                <img src="https://s2.svgbox.net/hero-solid.svg?ic=menu&color=000" width="32" height="32">
             </label>
-            <input type="checkbox" name="" id="chk__burger" class="chk__burger">
+            <input type="checkbox"  id="chk__burger" class ="chk__burger">
             <div class="entete__nav">
                 <nav class="entete__menu">
                     <ul class="menu">
                         <li class="menu__li">
+                            <a class="menu__a" href="#">Sport</a>
+                        </li>   
+                        <li class="menu__li">
+                            <a class="menu__a" href="#">Pleine Nature</a>
+                        </li>
+                        <li class="menu__li">
+                            <a class="menu__a" href="#">Croisière</a>
+                        </li>
+                        <li class="menu__li">
                             <a class="menu__a" href="#">Aventure</a>
                         </li>
                         <li class="menu__li">
-                            <a class="menu__a" href="#">Sportive</a>
+                            <a class="menu__a" href="#">Culturel</a>
                         </li>
                         <li class="menu__li">
-                            <a class="menu__a"  href="#">Culturelle</a>
+                            <a class="menu__a"  href="#">Repos</a>
                         </li>
                         <li class="menu__li">
                             <a  class="menu__a" href="#">Zen</a>
                         </li>
+                        <li class="menu__li">
+                            <a class="menu__a" href="#">Économique</a>
+                        </li>
+                        <li class="menu__li">
+                            <a class="menu__a"  href="#">Favorite</a>
+                        </li>
+                        <li class="menu__li">
+                            <a  class="menu__a" href="#">Pays</a>
+                        </li>
+                        
                     </ul>
                 </nav>
                 <div class="entete__recherche">
-                    <form action="" class="recherche">
-                        <input type="text" class="recherche__input">
+                    <form class="recherche">
+                        <input type="text" class="recherche__input" placeholder="Recherche...">
                         <img class="recherche__img" src="https://s2.svgbox.net/hero-outline.svg?ic=search&color=000" width="20" height="20">
                     </form>
                 </div>
@@ -49,13 +68,19 @@
                 Club de voyage
             </h1>
             <p class="hero__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aspernatur est officiis, mollitia minus asperiores quas libero saepe consequuntur at blanditiis et eligendi, sequi sit quae laboriosam, ex delectus nesciunt.
+                Découvrez des destinations uniques et inoubliables avec Mondo Voyages. Nous vous offrons des authentique, des paysages à couper le souffle et des aventures sur mesure. Partez à la découverte du monde avec nous et créez des souvenirs impérissables.
             </p>
-            <a href="" class="hero__courriel">
+            <p class="hero__courriel">
                 info@cmaisonneuve.qc.ca
-            </a>
+            </p>
+            <p class="hero__addresse">
+                3800, rue Sherbrooke, Montreal
+            </p>
+            <p class="hero__numero">
+                514-254-7131
+            </p>
             <button class="hero__bouton">
-                Inscription
+                s'inscrire
             </button>
             <div class="hero__icone-app">
                 <img src="https://s2.svgbox.net/social.svg?ic=facebook&color=000000" width="20" height="20">
@@ -65,23 +90,64 @@
             </div>
         </div>
     </section>
-    <section class="galerie">
-        <figure class="galerie__fig">
-            <img src="" alt="">
-        </figure>
-    </section>
- 
-    <section class="promotion">
-        <div class="carte carte--grande">
-            <div class="carte__image">
-                <img src="images/img1.jpg" alt="Image de voyage">
-            </div>
-            <div class="carte__contenu">
-                <h2 class="carte__titre">Destination de rêve</h2>
-                <p class="carte__description">Découvrez des endroits magnifiques à travers le monde.</p>
-                <button class="carte__bouton carte__bouton--actif">Réserver</button>
-            </div>
+    
+    <section class="form__formulaire">
+        <div class="formulaire">
+            <form>
+                <div class="form__reponse">
+                    <label for="nom">Nom:</label><br>
+                    <input type="text" class="formulaire__input" name="nom" placeholder="Écrivez votre nom"><br>
+                </div>
+                <div class="form__reponse">
+                    <label for="prenom">Prénom:</label><br>
+                    <input type="text" class="formulaire__input" name="prenom"placeholder="Écrivez votre prénom"><br>
+                </div>
+                <div class="form__reponse">
+                    <label for="courriel">Courriel:</label><br>
+                    <input type="text" class="formulaire__input" name="courriel" placeholder="Écrivez votre courriel"><br>
+                </div>
+                <div class="form__reponse">
+                    <label for="telephone">Téléphone:</label><br>
+                    <input type="text" class="formulaire__input" name="telephone"placeholder="Écrivez votre téléphone" ><br>
+                </div>
+                    <button class="formulaire__button">S'inscrire</button>                
+            </form>
         </div>
+    </section>
+    <section class="galerie">
+        <h2>Nos destinations favorites</h2>
+        <div class="galerie__destinations">
+            <figure class="galerie__fig">
+                <img src="images/Australie.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/canada.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/chine.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/espagne.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/japon.jpg"class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/scotland.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/tazania.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/uk.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/usa.jpg" class="galerie__img">
+            </figure>
+            <figure class="galerie__fig">
+                <img src="images/vietnam.jpg"class="galerie__img">
+            </figure>
+        </div>   
     </section>
 </body>
 </html>
